--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Start Header -->
     <div class="header" id="header">
       <div class="container">
-        <a href="#" class="logo">Elzero</a>
+        <a href="#" class="logo">3Adel</a>
         <ul class="main-nav">
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -848,7 +848,7 @@
     <div class="footer">
       <div class="container">
         <div class="box">
-          <h3>Elzero</h3>
+          <h3>3Adel</h3>
           <ul class="social">
             <li>
               <a href="#" class="facebook">
@@ -882,7 +882,7 @@
         <div class="box">
           <div class="line">
             <i class="fas fa-map-marker-alt fa-fw"></i>
-            <div class="info">Egypt, Giza, Inside The Sphinx, Room Number 220</div>
+            <div class="info">Egypt, Giza,ElHawamda </div>
           </div>
           <div class="line">
             <i class="far fa-clock fa-fw"></i>
@@ -891,8 +891,8 @@
           <div class="line">
             <i class="fas fa-phone-volume fa-fw"></i>
             <div class="info">
-              <span>+20123456789</span>
-              <span>+20198765432</span>
+              <span>+201014919047</span>
+              <span>+201064620610</span>
             </div>
           </div>
         </div>
@@ -905,7 +905,7 @@
           <img src="imgs/gallery-06.png" alt="" />
         </div>
       </div>
-      <p class="copyright">Made With &lt;3 By Elzero</p>
+      <p class="copyright">Made With &lt;3 By 3Adel</p>
     </div>
     <!-- End Footer -->
     <script src="js/main.js"></script>
