--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elzero</title>
+    <title>3Adel</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/elzero.css" />
     <!-- Font Awesome -->
@@ -75,7 +75,7 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>Welcome, To Elzero World</h1>
+          <h1>Welcome, To 3Adel World</h1>
           <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
         </div>
         <div class="image">
